[gd_scene load_steps=7 format=3 uid="uid://bsw1fy3p7ltt3"]

[ext_resource type="Script" path="res://pipes/scripts/pipe_pair.gd" id="1_gfche"]
[ext_resource type="Texture2D" uid="uid://3stun0mm7m5" path="res://GD0.1_Assets/Pipe.png" id="2_14n5f"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0xupw"]
size = Vector2(155, 883)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5gc17"]
size = Vector2(154, 883)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sjo5f"]
size = Vector2(25.5, 394.5)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37tl1"]
size = Vector2(64, 1395)

[node name="PipePair" type="Node2D"]
position = Vector2(60, 0)
script = ExtResource("1_gfche")

[node name="TopPipe" type="Area2D" parent="."]

[node name="Sprite2D" type="Sprite2D" parent="TopPipe"]
position = Vector2(3.05176e-05, -264)
rotation = 3.14159
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_14n5f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="TopPipe"]
position = Vector2(-1.5, -257.5)
shape = SubResource("RectangleShape2D_0xupw")

[node name="BottomPipe" type="Area2D" parent="."]
position = Vector2(0, 72)

[node name="Sprite2D" type="Sprite2D" parent="BottomPipe"]
position = Vector2(0, 1006)
scale = Vector2(0.15, 0.15)
texture = ExtResource("2_14n5f")

[node name="CollisionShape2D" type="CollisionShape2D" parent="BottomPipe"]
position = Vector2(0, 1000.5)
shape = SubResource("RectangleShape2D_5gc17")

[node name="EarnPoint" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="EarnPoint"]
position = Vector2(50.25, 336)
shape = SubResource("RectangleShape2D_sjo5f")

[node name="Detect" type="Area2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detect"]
position = Vector2(-2, 158.5)
shape = SubResource("RectangleShape2D_37tl1")

[connection signal="body_entered" from="TopPipe" to="." method="_on_top_pipe_body_entered"]
[connection signal="body_entered" from="BottomPipe" to="." method="_on_bottom_pipe_body_entered"]
[connection signal="body_entered" from="EarnPoint" to="." method="_on_earn_point_body_entered"]
[connection signal="area_entered" from="Detect" to="." method="_on_detect_area_entered"]
